--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   </main>
 
-  <footer>Instructor - Dima Marachi - BOW VALLEY COLLEGE</footer>
+  <footer>Instructor - Dima Marachi - 2023</footer>
 
 
 </body>
