--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
   <main>
     <h1>TECH 2102 PROJECT - GROUP 1</h1>
+
     <p>This page was created just to demonstrate the project, and its purpose is to prove the operation of the deploy automation using the following platforms:</p>
     <ul>
       <li>Amazon AWS EC2</li>
@@ -35,9 +36,11 @@
       </ul>
     </div>
 
+    <p>This paragraph was added in the last commit and push to git hub to show Jenkins working.</p>
+
   </main>
 
-  <footer>Instructor - Dima Marachi - 2023</footer>
+  <footer>Instructor - Dima Marachi - BOW VALLEY COLLEGE</footer>
 
 
 </body>
