--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 <body>
   <main>
     <h1>TECH 2102 PROJECT - GROUP 1</h1>
+    <h1>TECH 2102 PROJECT - GROUP 1</h1>
+    <h1>TECH 2102 PROJECT - GROUP 1</h1>
+    <h1>TECH 2102 PROJECT - GROUP 1</h1>
+    <h1>TECH 2102 PROJECT - GROUP 1</h1>
 
     <p>This page was created just to demonstrate the project, and its purpose is to prove the operation of the deploy automation using the following platforms:</p>
     <ul>
@@ -36,7 +40,7 @@
       </ul>
     </div>
 
-    <p>This paragraph was added in the last commit and push to git hub to show Jenkins working.</p>
+
 
   </main>
 
