Update for presentation

--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@
 <body>
   <main>
     <h1>TECH 2102 PROJECT - GROUP 1</h1>
-    <h1>TECH 2102 PROJECT - GROUP 1</h1>
-    <h1>TECH 2102 PROJECT - GROUP 1</h1>
-    <h1>TECH 2102 PROJECT - GROUP 1</h1>
-    <h1>TECH 2102 PROJECT - GROUP 1</h1>
 
     <p>This page was created just to demonstrate the project, and its purpose is to prove the operation of the deploy automation using the following platforms:</p>
     <ul>
@@ -44,7 +40,7 @@
 
   </main>
 
-  <footer>Instructor - Dima Marachi - BOW VALLEY COLLEGE</footer>
+  <footer>Instructor - Dima Marachi - BOW VALLEY COLLEGE - 2023</footer>
 
 
 </body>
