--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <h1>TECH 2102 PROJECT - GROUP 1</h1>
 
     <p>This page was created just to demonstrate the project, and its purpose is to prove the operation of the deploy automation using the following platforms:</p>
+
+    <p>This page was created just to demonstrate the project, and its purpose is to prove the operation of the deploy automation using the following platforms:</p>
+
+    <p>This page was created just to demonstrate the project, and its purpose is to prove the operation of the deploy automation using the following platforms:</p>
+
     <ul>
       <li>Amazon AWS EC2</li>
       <li>Amazon AWS Identity and Access Management (IAM)</li>
